--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Website / CodingNepal </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,7 +49,7 @@
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="" alt="hero" class="hero-image">
+                    <img src="coffee-website/coffee-hero-section.png" alt="hero" class="hero-image">
                 </div>
             </div>
         </section>
